--- a/.swiftpm/xcode/xcshareddata/xcschemes/NimbusUI-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/NimbusUI-Package.xcscheme
@@ -136,6 +136,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "NimbusBezelsTests"
+               BuildableName = "NimbusBezelsTests"
+               BlueprintName = "NimbusBezelsTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
